# RaspberryPi

./: .gitignore  Cargo.toml  update.sh
dht22/: Cargo.toml
dht22/src/: am2302.rs  lib.rs  main.rs
domain/: .env  Cargo.toml
domain/schema/: init_db.sql
domain/src/: block_list.rs  filters.rs  lib.rs
domain/src/db/: block_list.rs  filters.rs  mod.rs
pi_client/: package-lock.json  package.json
pi_client/public/: index.html
pi_client/src/: App.tsx  Footer.tsx  Icons.tsx  Main.scss  Main.tsx  Nav.tsx  State.tsx  dataFetcher.ts  index.tsx  requests.ts  websocket.ts
pi_client/src/pages/: Config.tsx  Dashboard.tsx  Health.tsx  Queries.tsx
pi_server/: .env  Cargo.toml  block_list.txt  build.rs  config.json  log4rs.yml
pi_server/schema/: create_indices.sql  create_tables.sql
pi_server/src/: blocker.rs  cloudflared.rs  dns.rs  downloader.rs  http_client.rs  lib.rs  main.rs  migration.sql  timer.rs
pi_server/src/blocker/: mod.rs  trie.rs
pi_server/src/db/: block_list.rs  dns_requests.rs  filters.rs  init.rs  mod.rs  sys_info.rs
pi_server/src/dns/: domain.rs  filter.rs  mod.rs  resolver.rs
pi_server/src/sysinfo/: climate.rs  mod.rs
pi_server/src/web/: config.rs  dashboard.rs  health.rs  mod.rs  queries.rs  websocket.rs
