[package]
name = "domain"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0"
env_logger = "0"
once_cell = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
futures-util = "0"

chrono = "0"
regex = "1"
itertools = "0"
