[package]
name = "pi_server"
version = "0.5.0"
authors = ["Prashant Bhushan Singh <prashant.bhushansingh@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
once_cell = "1"

log = "0"
log4rs = { version = "1", features = ["file_appender", "rolling_file_appender", "size_trigger"] }

serde = "1"
serde_json = "1"
serde_yaml = "0"

futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time", "process"] }

reqwest = { version = "0", features = ["cookies", "rustls"] }

trust-dns-proto = "0"
trust-dns-client = "0"
trust-dns-server = "0"

chrono = "0"
sqlx = { git = "https://github.com/launchbadge/sqlx", features = ["runtime-tokio-rustls", "sqlite", "chrono", "all-types"] }
warp = { git = "https://github.com/seanmonstar/warp", features = ["compression", "websocket"] }
http = "0"
mime_guess = "2"

linked-hash-map = { version = "0", features = ["serde_impl"] }
regex = "1"
zip = "0"
systemstat = { git = "https://github.com/myfreeweb/systemstat" }
dht22 = { path = "../dht22" }
rustlearn = "0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0"

[build-dependencies]
anyhow = "1"
zip = "0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
