[package]
name = "pi_server"
version = "2.0.0"
authors = ["Prashant Bhushan Singh <prashant.bhushansingh@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
once_cell = "1"

log = "0"
log4rs = { version = "1", features = ["file_appender", "rolling_file_appender", "size_trigger"] }

serde = "1"
serde_json = "1"
serde_yaml = "0"
chrono = "0"

trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git" }
trust-dns-client = { git = "https://github.com/bluejekyll/trust-dns.git" }
trust-dns-server = { git = "https://github.com/bluejekyll/trust-dns.git" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "time", "process"] }
futures-util = "0"
axum = { version = "0", features = ["ws"] }
sqlx = { version = "0", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
reqwest = { version = "0", features = ["cookies", "rustls"] }

http = "0"
mime_guess = "2"
linked-hash-map = { version = "0", features = ["serde_impl"] }
itertools = "0"
regex = "1"
zip = "0"
domain = { path = "../domain" }

systemstat = { git = "https://github.com/myfreeweb/systemstat" }
dht22 = { path = "../dht22" }
rustlearn = "0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0"

[build-dependencies]
anyhow = "1"
zip = "0"
